Fixed spacing

--- a/app/assets/stylesheets/grayscale.css
+++ b/app/assets/stylesheets/grayscale.css
@@ -248,6 +248,8 @@ a:focus {
 @media (min-width: 767px) {
   .content-section {
     padding-top: 250px;
+    padding-bottom: 150px;
+    /*margin-top: 50vh;*/
     background-color: white;
   }
   .download-section {
